fix bug of components jump when address bar is auto hidden

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 html {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
-  height: 500%;
+  height: 500vh;
   margin: 0;
   padding: 0;
   font-family: 'Source Code Pro', monospace;
